force-app/main/default/objects/LeadProducts__c.object
<CustomObject>
    <fields>
        <fullName>Captured_Charge_Count__c</fullName>
        <label>Captured Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Captured_Charges__c</fullName>
        <label>Captured Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Captured_Transfer_Count__c</fullName>
        <label>Captured Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Captured_Transfers__c</fullName>
        <label>Captured Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Completed_Payout_Count__c</fullName>
        <label>Completed Payouts Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Payouts__c</fullName>
        <label>Completed Payouts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Backend_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Backend Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Discount_Product__c</fullName>
        <formula>Product__r.Is_Discount_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Discount Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_subscription__c</fullName>
        <formula>NOT(ISBLANK(  Plan_handle__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Price__c</fullName>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>Journal__c</referenceTo>
        <relationshipLabel>Lead Products</relationshipLabel>
        <relationshipName>Lead_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Products</relationshipLabel>
        <relationshipName>Lead_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximum_Quantity_Per_Order__c</fullName>
        <formula>Product__r.Maximum_Quantity_Per_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Quantity Per Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Charge_Count__c</fullName>
        <label>Open Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Charges__c</fullName>
        <label>Open Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Payout_Count__c</fullName>
        <label>Open Payout Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Payouts__c</fullName>
        <label>Open Payouts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Transfer_Count__c</fullName>
        <label>Open Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Transfers__c</fullName>
        <label>Open Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Provision_Value__c</fullName>
        <label>Partner Provision Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Value__c</fullName>
        <label>Partner Sales Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payments</label>
        <referenceTo>Payments__c</referenceTo>
        <relationshipLabel>Lead Products</relationshipLabel>
        <relationshipName>Lead_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_handle__c</fullName>
        <label>Plan handle</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricebookEntry_Id__c</fullName>
        <label>PricebookEntry Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook_Id__c</fullName>
        <label>Pricebook Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lead Products</relationshipLabel>
        <relationshipName>Lead_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provision_Base__c</fullName>
        <label>Provision Base</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refunded_Charge_Count__c</fullName>
        <label>Refunded Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refunded_Charges__c</fullName>
        <label>Refunded Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retained_Charge_Count__c</fullName>
        <label>Retained Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retained_Charges__c</fullName>
        <label>Retained Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retained_Transfer_Count__c</fullName>
        <label>Retained Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retained_Transfers__c</fullName>
        <label>Retained Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reversed_Transfer_Count__c</fullName>
        <label>Reversed Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reversed_Transfers__c</fullName>
        <label>Reversed Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <formula>( Quantity__c * Item_Price__c ) - (( Discount__c / 100) * ( Quantity__c * Item_Price__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Lead Products</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Discount__c</columns>
        <columns>Item_Price__c</columns>
        <columns>Pricebook_Id__c</columns>
        <columns>PricebookEntry_Id__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Id__c</columns>
        <columns>Quantity__c</columns>
        <columns>Lead__c</columns>
        <columns>Sub_Total__c</columns>
        <columns>Provision_Base__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Membership</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LeadProducts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Discount_Products_Must_Be_Backend_Create</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    Is_Discount_Product__c = TRUE,
    Is_Backend_Created__c = FALSE
)</errorConditionFormula>
        <errorMessage>Discount products can only be created through the backend logic.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Max_Quantity_Per_Product</fullName>
        <active>false</active>
        <description>If a Product has a Max Qty Per Order, this validation rule blocks higher quantities of it.</description>
        <errorConditionFormula>AND(
    NOT(ISBLANK(Product__r.Maximum_Quantity_Per_Order__c)),
    Quantity__c &gt; Product__r.Maximum_Quantity_Per_Order__c
)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>You can&apos;t order more than the allowed maximum quantity for this product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_change_owner</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR($Profile.Name = &quot;Sales Agent&quot;,$Profile.Name = &quot;Legal&quot;)
, ISCHANGED( OwnerId ) )</errorConditionFormula>
        <errorMessage>You don&apos;t have permission to change the record owner</errorMessage>
    </validationRules>
</CustomObject>