force-app/main/default/objects/LeadProducts__c/validationRules/Discount_Products_Must_Be_Backend_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Products_Must_Be_Backend_Create</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Is_Discount_Product__c = TRUE,
    Is_Backend_Created__c = FALSE
)</errorConditionFormula>
    <errorMessage>Discount products can only be created through the backend logic.</errorMessage>
</ValidationRule>