force-app/main/default/objects/LeadProducts__c/validationRules/No_change_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>No_change_owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR($Profile.Name = &quot;Sales Agent&quot;,$Profile.Name = &quot;Legal&quot;)
, ISCHANGED( OwnerId ) )</errorConditionFormula>
    <errorMessage>You don&apos;t have permission to change the record owner</errorMessage>
</ValidationRule>